# Code-Improvement-Agent

./: .gitignore  CHANGELOG.md  pyproject.toml  repo_launcher.py  scan_all_repos.ps1  scan_all_repos_smart.ps1
code_improvement_agent/: __init__.py  __main__.py  agent.py  auto_fix.py  config.py  llm.py  report.py  scoring.py  smart_analyzer.py  test_generator.py  trends.py
code_improvement_agent/analyzers/: __init__.py  ast_analyzer.py  automation.py  base.py  clarity.py  functionality.py  reusability.py  security.py  structure.py
code_improvement_agent/tests/: test___main__.py  test_agent.py  test_ast_analyzer.py  test_auto_fix.py  test_automation.py  test_base.py  test_clarity.py  test_config.py  test_functionality.py  test_llm.py  test_report.py  test_reusability.py  test_scoring.py  test_security.py  test_smart_analyzer.py  test_structure.py  test_test_generator.py  test_trends.py
