[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "code-improvement-agent"
version = "1.0.0"
description = "Systematic repository analysis and improvement agent"
requires-python = ">=3.10"

[project.scripts]
code-improve = "code_improvement_agent.__main__:main"

[tool.ruff]
line-length = 100
